--- a/register.html
+++ b/register.html
@@ -6,10 +6,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap" rel="stylesheet">
-
-
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/petsalon.css">
+    <link rel="stylesheet" href="styles/display.css">
+    <link rel="stylesheet" href="styles/register.css">
+    <script src="https://kit.fontawesome.com/ddf79d53c5.js" crossorigin="anonymous"></script>
     <title>Document</title>
 </head>
 <body>
@@ -22,9 +24,9 @@
             </nav>
         </div>
     </header>
-    <main>
+    <main class="container ">
         <h2>Register a new pet</h2>
-        <div>
+        <div class=input-container>
             <div>
                 <label>Name:</label>
                 <input type="text" id="txtName" class="pet-type">
@@ -39,7 +41,12 @@
             </div>
             <div>
                 <label>Service:</label>
-                <input type="text" id="txtService" class="pet-type">
+                <select name="" id="txtService"class="pet-type">
+                    <option value="" disabled selected>Select a service</option>
+                    <option value="grooming">Grooming</option>
+                    <option value="vaccines">Vaccines</option>
+                    <option value="nails">Nails trimming</option>
+                </select>
             </div>
             <div>
                 <label>Type:</label>
@@ -52,11 +59,47 @@
                 <option value="Raccoon">Raccoon</option>
             </select>
             </div>
-            <button onclick="register()">Register</button>
+        </div>
+            <button onclick="register()" type="button" class="btn btn-secondary">Register</button>
+        </div>
+
+        <div class="info-bar">
+            <h3>Pets information</h3>
+            <div>
+                <label for="totalPets">Total: <span id="totalCount"><h3>0</h3></span></label>
+            </div>
+            <div>
+            <label for="grooming">✂️: <span id="totalGroomings"> 0 </span></label>
+            <label for="grooming">💉: <span id="totalVaccines"> 0 </span></label>
+            <label for="grooming">💅: <span id="totalNails">0</span></label>
+            </div>
+
+        </div>
+
+        <div id="pets">
+
+        </div>
+        <div>
+        <table class="table table-striped">
+            <thead>
+                <tr>
+                    <th>Name</th>
+                    <th>Age</th>
+                    <th>Gender</th>
+                    <th>Service</th>
+                    <th>Type</th>
+                    <th>Action</th>
+                </tr>
+            </thead>
+            <tbody id="petRows">
+
+            </tbody>
+        </table>
         </div>
     </main>
 
 
     <script src="./scripts/register.js"></script>
+    <script src="./scripts/display.js"></script>
 </body>
 </html>
