--- a/register.html
+++ b/register.html
@@ -89,6 +89,7 @@
                     <th>Service</th>
                     <th>Type</th>
                     <th>Action</th>
+                    <th>Payment</th>
                 </tr>
             </thead>
             <tbody id="petRows">
