--- a/service.html
+++ b/service.html
@@ -38,22 +38,15 @@
             <div>
                 
                 <label>Price:</label>
-                <select name="" id="txtPrice"class="pet-type">
-                    <option value="" disabled selected>Select a service</option>
-                    <option value="grooming">Grooming $100</option>
-                    <option value="vaccines">Vaccines $80</option>
-                    <option value="nails">Nails trimming $40</option>
-                </select>
+                <input name="" id="txtPrice"class="pet-type">
             </div>
             <div>
-                <label>Type:</label>
+                <label>Service:</label>
                 <select name="" id="txtType" class="pet-type">
-                    <option value="" disabled selected>Select pet type</option>
-                <option value="Dog"> Dog</option>
-                <option value="Cat">Cat</option>
-                <option value="Squirrel">Squirrel</option>
-                <option value="Hampster">Hampster</option>
-                <option value="Raccoon">Raccoon</option>
+                    <option value="" disabled selected>Select a service</option>
+                    <option value="grooming">Grooming</option>
+                    <option value="vaccines">Vaccines</option>
+                    <option value="nails">Nails trimming</option>
                 </select>
             <button onclick="register()" type="button" class="btn btn-secondary">Register</button>
         </div>
@@ -61,8 +54,8 @@
     </main>
 
     <script src="Plugins/jquery3.7.1.js"></script>
-    <script src="scripts/service.js"></script>
-    
+    <script src="scripts/storeManager.js"></script>
     <script src="scripts/notification.js"></script>
+    <script src="scripts/service.js"></script>
 </body>
 </html>
