--- a/petsalon.html
+++ b/petsalon.html
@@ -6,30 +6,78 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="styles/petsalon.css">
     <title>Pet Salon</title>
 </head>
 
-<body class="body-img">
-    <header class="site-header">
-        <h1>Pet Salon</h1>
-        <nav class="menu-nav">
-            <a href="petsalon.html">Home</a>
-            <a href="register.html">Register</a>
-            <a href="contact.html">Contact</a>
-        </nav>
-    </header>
-    <div class="flex">
-        <div class="main-body">
-            <h2>Pet information</h2>
-            <button class="btn" onclick="petSalonDatabase()"><b>Find pet info</b></button>
-        </div>
-        <div class="box">
-            <div class="results" id="display">
-            </div>
-        </div>
+<body>
+    <div>
+        <header class="site-header">
+            <div class="header-content">
+                <div class="header-row">
+                    <h1>The Fashion Pet</h1>
+                    <nav class="menu-nav">
+                        <a href="petsalon.html">Home</a>
+                        <a href="register.html">Register</a>
+                        <a href="service.html">Service</a>
+                    </nav>
+                </div>
+                
+                <div class="img-dog"></div>
+                <div>
+                    <h2>What we do</h2>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium aperiam consequuntur
+                        similique tempore. Dolore neque blanditiis eligendi, dolores iure repellendus eos odit sint
+                        expedita earum, obcaecati beatae? Omnis, ab accusamus!</p>
+                    </div>
+                    <div>
+                        <h2>Why we do it</h2>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. A possimus, perspiciatis quibusdam
+                            fugiat suscipit mollitia, modi numquam quisquam iste accusamus voluptatem sunt corporis? Unde
+                            error officiis laudantium sapiente quia autem dolores vero temporibus necessitatibus, sit esse
+                            odio sed harum officia!</p>
+                        </div>
+                        <div>
+                            <h2> Who do we work with?</h2>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam hic maxime deleniti consequatur
+                                accusamus maiores a, fuga enim blanditiis, placeat exercitationem! Nisi reiciendis excepturi rem
+                                error? Quaerat quia, eveniet, tempora suscipit totam natus minima hic accusantium explicabo
+                                velit dolor voluptatum?</p>
+                            </div>
+                            <div>
+                                <h2>When we started</h2>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam commodi molestias eos. Quidem quam
+                                    deserunt quo qui voluptate sint, molestias expedita inventore aspernatur dolores ea, saepe
+                                    laboriosam ducimus velit mollitia!</p>
+                                </div>
+                                <a href="register.html">Book an appointment</a>
+                            </div>
+                        </div>
+                        <div class="txt-header">
+                    </header>
     </div>
+        <main class="main-body">
+            <div class="main-title">
+                <div>
+                <h2>What we offer</h2>
+            </div>
+            <div>
+                <h3>Grooming ✂️</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam modi nulla, hic magnam quia quas. Maiores ad voluptas, dolorum mollitia tenetur ipsum odit! Voluptas, aut quasi ab voluptate fuga nihil!</p>
+            </div>
+            <div>
+                <h3>Vaccines 💉</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid harum vero officia, nesciunt sed praesentium optio. Ducimus repudiandae quasi velit facilis deleniti! Ducimus doloribus pariatur neque esse, veritatis beatae eius?</p>
+            </div>
+            <div>
+                <h3>Nail trimming 💅</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae placeat laborum aliquam atque aut minima similique maxime voluptatem! Atque accusamus nam delectus dolorum temporibus pariatur possimus rerum laborum est expedita!</p>
+            </div>
+            </div>
+        </main>
     <script src="scripts/petsalon.js"></script>
 </body>
 
