--- a/register.html
+++ b/register.html
@@ -21,6 +21,7 @@
             <nav>
                 <a href="petsalon.html">Home</a>
                 <a href="register.html">Register</a>
+                <a href="service.html">Service</a>
             </nav>
         </div>
     </header>
