--- a/service.html
+++ b/service.html
@@ -118,8 +118,13 @@
                         <option value="grooming">Grooming</option>
                         <option value="vaccines">Vaccines</option>
                         <option value="nails">Nails trimming</option>
+                        <option value="Lodging">Lodging</option>
+                        <option value="Flee">Flee Bath</option>
+                        <option value="Declawing">Cat Declawing</option>
                     </select>
-                    <button onclick="register()" type="button" class="btn btn-secondary">Register</button>
+                </div>
+                <div class="center-btn">
+                <button onclick="register()" type="button" class="btn btn-secondary">Register</button>
                 </div>
             </div>
         </main>
